force-app/main/default/objects/QuoteLineItem/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <formula>IF(  Product2.ProductCode  = &apos;Shipping&apos;, 0 ,  PricebookEntry.UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>