force-app/main/default/objects/QuoteLineItem/fields/rootstock__quoteline_duedate__c.field-meta.xml
<CustomField>
    <fullName>rootstock__quoteline_duedate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>