force-app/main/default/objects/QuoteLineItem/fields/rootstock__quoteline_quantityMessage__c.field-meta.xml
<CustomField>
    <fullName>rootstock__quoteline_quantityMessage__c</fullName>
    <label>Message</label>
    <length>225</length>
    <type>Text</type>
</CustomField>