force-app/main/default/objects/QuoteLineItem/fields/rootstock__quoteline_soprod__c.field-meta.xml
<CustomField>
    <fullName>rootstock__quoteline_soprod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rootstock Product Master</label>
    <referenceTo>rstk__soprod__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>