force-app/main/default/objects/QuoteLineItem/fields/rootstock__quoteline_uom__c.field-meta.xml
<CustomField>
    <fullName>rootstock__quoteline_uom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales UOM</label>
    <referenceTo>rstk__syuom__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>