force-app/main/default/objects/QuoteLineItem/fields/rstk__Quoteline_assignedto__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quoteline_assignedto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned User</label>
    <referenceTo>rstk__syusr__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>assignedtoQuotelines</relationshipName>
    <type>Lookup</type>
</CustomField>