force-app/main/default/objects/QuoteLineItem/fields/rstk__quoteline_iccomcod__c.field-meta.xml
<CustomField>
    <fullName>rstk__quoteline_iccomcod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inventory Commodity Code</description>
    <label>Inventory Commodity Code</label>
    <referenceTo>rstk__iccomcod__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>quotelines</relationshipName>
    <type>Lookup</type>
</CustomField>