force-app/main/default/objects/QuoteLineItem/fields/rstk__Quoteline_labseq__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quoteline_labseq__c</fullName>
    <label>Labor Sequence Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>