force-app/main/default/objects/QuoteLineItem/fields/rstk__quoteline_rsprice__c.field-meta.xml
<CustomField>
    <fullName>rstk__quoteline_rsprice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Priced From Rootstock</description>
    <label>Priced From Rootstock</label>
    <type>Checkbox</type>
</CustomField>