force-app/main/default/objects/QuoteLineItem/fields/rstk__Quoteline_rstype__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quoteline_rstype__c</fullName>
    <label>Rootstock Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
                <default>true</default>
                <label>Labor</label>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>