force-app/main/default/objects/QuoteLineItem/fields/rstk__Quoteline_sfprodid__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quoteline_sfprodid__c</fullName>
    <label>SF Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>