force-app/main/default/objects/QuoteLineItem/fields/rstk__Quoteline_sfprodname__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quoteline_sfprodname__c</fullName>
    <label>SF Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>