force-app/main/default/objects/QuoteLineItem/fields/rstk__quoteline_socomm__c.field-meta.xml
<CustomField>
    <fullName>rstk__quoteline_socomm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>rstk__socomm__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>quotelines</relationshipName>
    <type>Lookup</type>
</CustomField>