force-app/main/default/objects/QuoteLineItem/fields/rstk__triggeroptions__c.field-meta.xml
<CustomField>
    <fullName>rstk__triggeroptions__c</fullName>
    <label>triggeroptions</label>
    <length>40</length>
    <type>Text</type>
</CustomField>