force-app/main/default/objects/QuoteLineItem/fields/Special_Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Note__c</fullName>
    <label>Special Order Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>